force-app/main/default/objects/Delivery_Estimate_Detail__c/Delivery_Estimate_Detail__c.object-meta.xml
<CustomObject>
    <label>Delivery Estimate Detail</label>
    <nameField>
        <displayFormat>DED-{00000}</displayFormat>
        <label>Delivery Estimate Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delivery Estimate Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>