force-app/main/default/objects/Delivery_Estimate_Detail__c/fields/Cubic_Feet__c.field-meta.xml
<CustomField>
    <fullName>Cubic_Feet__c</fullName>
    <formula>VALUE(Product__r.Product_Height__c) * VALUE(Product__r.Product_Length__c) *  VALUE(Product__r.Product_Width__c)</formula>
    <label>Cubic Feet</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>