force-app/main/default/objects/Delivery_Estimate_Detail__c/fields/Installation_Type__c.field-meta.xml
<CustomField>
    <fullName>Installation_Type__c</fullName>
    <label>Installation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Brown Box</fullName>
            </value>
            <value>
                <fullName>Uncrate and Leave</fullName>
            </value>
            <value>
                <fullName>Setup and Deluxe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>