force-app/main/default/objects/Delivery_Estimate_Detail__c/fields/Product2__c.field-meta.xml
<CustomField>
    <fullName>Product2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Delivery Estimate Details</relationshipLabel>
    <relationshipName>Delivery_Estimate_Details</relationshipName>
    <type>Lookup</type>
</CustomField>