force-app/main/default/objects/Delivery_Estimate_Detail__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product_old</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Delivery Estimate Details</relationshipLabel>
    <relationshipName>Delivery_Estimate_Details</relationshipName>
    <type>Lookup</type>
</CustomField>